--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -14,6 +14,7 @@ retrofit2 = "2.9.0"
 room = "2.6.1"
 kspPlugin = "2.0.10-1.0.24"
 glide = "4.16.0"
+okttp-logging = "4.10.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -33,6 +34,7 @@ androidx-room-compiler = { group = "androidx.room", name = "room-compiler", vers
 androidx-room-ktx = { group = "androidx.room", name = "room-ktx", version.ref = "room" }
 androidx-room-runtime = { group = "androidx.room", name = "room-runtime", version.ref = "room" }
 glide = { group = "com.github.bumptech.glide", name = "glide", version.ref = "glide" }
+okttp-logging = { group = "com.squareup.okhttp3", name = "logging-interceptor", version.ref = "okttp-logging" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
